Add basic frontend components

--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <title>Test site</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    </style>
   </head>
-  <body>
-    <h1>Hello From Haskell</h1>
+  <body class="site">
+    <main class="content">
+      <div class="container">
+        <h1 class="title">Pointfree.io</h1>
+        <h2 class="tag-line">convert Haskell code into pointfree Haskell code</h2>
+        <div class="code-input">
+          <input type="text" class="code-input__field" placeholder="What code do you want to convert?">
+          <button class="code-input__item">Convert</button>
+        </div>
+      </div>
+    </main>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
