Extract css as seperate file

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Test site</title>
+    <title>Pointfree.io</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    </style>
+    <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body class="site">
     <main class="content">
