Add some link formatting and add some copy

--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,17 @@
             </div>
           </div>
         </div>
+        <p>
+          You can learn more about pointfree haskell code <a href="https://wiki.haskell.org/Pointfree">Here</a>.
+        </p>
+        <p>
+          Built by <a href="https://github.com/keathley">Chris Keathley</a>
+          (<a href="https://twitter.com/chriskeathley">@ChrisKeathley</a>).
+          Comments, Pull Requests, and Issues are welcome on
+          <a href="https://github.com/keathley/pointfree.io">Github</a>.
+          This app is made possible by the the awesome <a href="https://github.com/bmillwood/pointfree">pointfree</a>
+          binary extracted from Lambda Bot.
+        </p>
       </div>
     </main>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
