Fix typo in input field.

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class="code">
             <h2 class="code__label">
-              Pointsfree Version
+              Pointfree Version
             </h2>
             <div class="code-output">
               <input class="js-pointfree-code" readonly="" tabindex="2">
