--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css" type="text/css">
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      $(function() {
+        $(document).on('click', '.js-submit-conversion', handleConvert);
+        $(".js-original-code").on("keydown", handleConvert)
+        $('.js-pointfree-code').click(onPointfreeClick)
 
-      ga('create', 'UA-61635542-1', 'auto');
-      ga('send', 'pageview');
+        function onPointfreeClick(e) {
+          $(this).select()
+        }
+
+        function handleConvert(e) {
+          var keyCode = e.keyCode || e.which;
+          if (keyCode && keyCode !== 13 && keyCode !== 1) return;
+
+          var c = $('.js-original-code').val()
+          var data = "code=" + encodeURIComponent(c)
+
+          $.ajax({
+            method: 'GET',
+            url: '/snippet',
+            data: data,
+            success: handleAjaxSuccess
+          });
+
+          function handleAjaxSuccess(data) {
+            var $pfInput = $('.js-pointfree-code')
+
+            if (data.error) {
+              $pfInput.val(data.error);
+            } else if (data.code) {
+              $pfInput.val(data.code)
+            }
+          }
+        }
+      });
     </script>
   </head>
   <body class="site">
@@ -54,6 +85,5 @@
         </p>
       </div>
     </main>
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
